--- a/index.ipynb
+++ b/index.ipynb
@@ -293,11 +293,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = []\n",
+    "text_values = [x]\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
    ]
   },
