--- a/index.ipynb
+++ b/index.ipynb
@@ -293,26 +293,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = [x]\n",
+    "text_values = [x_values]\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bar'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bar_trace_first_three_pops['type'] # 'bar'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -320,18 +331,20 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "text": [],
-         "type": "scatter",
-         "uid": "333ad5d4-c505-11e9-9533-5f53915208f3"
+         "text": [
+          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+         ],
+         "type": "bar",
+         "uid": "516f7884-c505-11e9-9533-5f53915208f3"
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"d2291426-f5bc-4d6c-b745-e60d6cd22eda\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d2291426-f5bc-4d6c-b745-e60d6cd22eda\", [{\"text\": [], \"type\": \"scatter\", \"uid\": \"3340dc86-c505-11e9-9533-5f53915208f3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"8899cd59-c2e0-430d-a841-d1ade5b0941d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8899cd59-c2e0-430d-a841-d1ade5b0941d\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"type\": \"bar\", \"uid\": \"5173de7e-c505-11e9-9533-5f53915208f3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"d2291426-f5bc-4d6c-b745-e60d6cd22eda\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d2291426-f5bc-4d6c-b745-e60d6cd22eda\", [{\"text\": [], \"type\": \"scatter\", \"uid\": \"3340dc86-c505-11e9-9533-5f53915208f3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"8899cd59-c2e0-430d-a841-d1ade5b0941d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8899cd59-c2e0-430d-a841-d1ade5b0941d\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"type\": \"bar\", \"uid\": \"5173de7e-c505-11e9-9533-5f53915208f3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
