Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,12 +293,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "text_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
+    "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
    ]
   },
   {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -332,19 +332,21 @@
        "data": [
         {
          "text": [
-          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
          ],
-         "type": "bar",
-         "uid": "516f7884-c505-11e9-9533-5f53915208f3"
+         "type": "scatter",
+         "uid": "64555e0a-c505-11e9-9533-5f53915208f3"
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"8899cd59-c2e0-430d-a841-d1ade5b0941d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8899cd59-c2e0-430d-a841-d1ade5b0941d\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"type\": \"bar\", \"uid\": \"5173de7e-c505-11e9-9533-5f53915208f3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"e9bca0ca-121a-40b8-9bd7-972f43f2d570\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e9bca0ca-121a-40b8-9bd7-972f43f2d570\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"scatter\", \"uid\": \"645a3312-c505-11e9-9533-5f53915208f3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"8899cd59-c2e0-430d-a841-d1ade5b0941d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8899cd59-c2e0-430d-a841-d1ade5b0941d\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"type\": \"bar\", \"uid\": \"5173de7e-c505-11e9-9533-5f53915208f3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"e9bca0ca-121a-40b8-9bd7-972f43f2d570\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e9bca0ca-121a-40b8-9bd7-972f43f2d570\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"scatter\", \"uid\": \"645a3312-c505-11e9-9533-5f53915208f3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
