--- a/index.ipynb
+++ b/index.ipynb
@@ -383,19 +383,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [[cities[0]['City'], cities[1]['City'], cities[2]['City']]], 'y': [[cities[0]['City'], cities[1]['City'], cities[2]['City']]], 'text': [[cities[0]['City'], cities[1]['City'], cities[2]['City']]]}\n",
+    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [[cities[0]['City'], cities[1]['City'], cities[2]['City']]], 'y': [[cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]], 'text': [[cities[0]['City'], cities[1]['City'], cities[2]['City']]]}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': [x_values], 'y': [y_values], 'text': [text_values]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [
+          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+         ],
+         "type": "scatter",
+         "uid": "acc6cf70-c505-11e9-9533-5f53915208f3",
+         "x": [
+          [
+           "Buenos Aires",
+           "Toronto",
+           "Pyeongchang"
+          ]
+         ],
+         "y": [
+          [
+           2891000,
+           2800000,
+           2581000
+          ]
+         ]
+        },
+        {
+         "text": [
+          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+         ],
+         "type": "scatter",
+         "uid": "acc6d1d2-c505-11e9-9533-5f53915208f3",
+         "x": [
+          [
+           "Buenos Aires",
+           "Toronto",
+           "Pyeongchang"
+          ]
+         ],
+         "y": [
+          [
+           4758,
+           2731571,
+           3194
+          ]
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"e4c75a1e-3afc-452c-8629-09aacecc5ea8\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e4c75a1e-3afc-452c-8629-09aacecc5ea8\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"accc6ef8-c505-11e9-9533-5f53915208f3\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"scatter\", \"uid\": \"accc710a-c505-11e9-9533-5f53915208f3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"e4c75a1e-3afc-452c-8629-09aacecc5ea8\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e4c75a1e-3afc-452c-8629-09aacecc5ea8\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"accc6ef8-c505-11e9-9533-5f53915208f3\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"scatter\", \"uid\": \"accc710a-c505-11e9-9533-5f53915208f3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops, bar_trace_first_three_areas])"
    ]
