--- a/index.ipynb
+++ b/index.ipynb
@@ -383,17 +383,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': [x_values], 'y': [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']], 'text': [cities[0]['City'], cities[1]['City'], cities[2]['City']]}\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': [x_values], 'y': [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']], 'text': [text_values]}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [x_values], 'y': [y_values], 'text': [text_values]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
           "['Buenos Aires', 'Toronto', 'Pyeongchang']"
          ],
          "type": "bar",
-         "uid": "d0e95396-c505-11e9-9533-5f53915208f3",
+         "uid": "e6e67318-c505-11e9-9533-5f53915208f3",
          "x": [
           [
            "Buenos Aires",
@@ -423,16 +423,16 @@
         },
         {
          "text": [
-          "Buenos Aires",
-          "Toronto",
-          "Pyeongchang"
+          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
          ],
          "type": "bar",
-         "uid": "d0e95580-c505-11e9-9533-5f53915208f3",
+         "uid": "e6e674f8-c505-11e9-9533-5f53915208f3",
          "x": [
-          "Buenos Aires",
-          "Toronto",
-          "Pyeongchang"
+          [
+           "Buenos Aires",
+           "Toronto",
+           "Pyeongchang"
+          ]
          ],
          "y": [
           4758,
@@ -444,10 +444,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"6c6204ab-4dc2-4fb6-b634-1d2a37509d9e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"6c6204ab-4dc2-4fb6-b634-1d2a37509d9e\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"d0f43068-c505-11e9-9533-5f53915208f3\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"d0f43306-c505-11e9-9533-5f53915208f3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"01fc411a-774f-424c-a090-54d0ca9d1b94\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"01fc411a-774f-424c-a090-54d0ca9d1b94\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"e6f60cba-c505-11e9-9533-5f53915208f3\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"e6f611d8-c505-11e9-9533-5f53915208f3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"6c6204ab-4dc2-4fb6-b634-1d2a37509d9e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"6c6204ab-4dc2-4fb6-b634-1d2a37509d9e\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"d0f43068-c505-11e9-9533-5f53915208f3\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"d0f43306-c505-11e9-9533-5f53915208f3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"01fc411a-774f-424c-a090-54d0ca9d1b94\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"01fc411a-774f-424c-a090-54d0ca9d1b94\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"e6f60cba-c505-11e9-9533-5f53915208f3\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"e6f611d8-c505-11e9-9533-5f53915208f3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
