Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
           "['Buenos Aires', 'Toronto', 'Pyeongchang']"
          ],
          "type": "bar",
-         "uid": "e6e67318-c505-11e9-9533-5f53915208f3",
+         "uid": "35e39022-c506-11e9-9533-5f53915208f3",
          "x": [
           [
            "Buenos Aires",
@@ -427,7 +427,7 @@
           "['Buenos Aires', 'Toronto', 'Pyeongchang']"
          ],
          "type": "bar",
-         "uid": "e6e674f8-c505-11e9-9533-5f53915208f3",
+         "uid": "35e39360-c506-11e9-9533-5f53915208f3",
          "x": [
           [
            "Buenos Aires",
@@ -436,19 +436,21 @@
           ]
          ],
          "y": [
-          4758,
-          2731571,
-          3194
+          [
+           4758,
+           2731571,
+           3194
+          ]
          ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"01fc411a-774f-424c-a090-54d0ca9d1b94\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"01fc411a-774f-424c-a090-54d0ca9d1b94\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"e6f60cba-c505-11e9-9533-5f53915208f3\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"e6f611d8-c505-11e9-9533-5f53915208f3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"cd30d1c2-20a6-4ab5-be05-009d2bdf8d91\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cd30d1c2-20a6-4ab5-be05-009d2bdf8d91\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"35f0e9a2-c506-11e9-9533-5f53915208f3\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"bar\", \"uid\": \"35f0ebb4-c506-11e9-9533-5f53915208f3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"01fc411a-774f-424c-a090-54d0ca9d1b94\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"01fc411a-774f-424c-a090-54d0ca9d1b94\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"e6f60cba-c505-11e9-9533-5f53915208f3\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"e6f611d8-c505-11e9-9533-5f53915208f3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"cd30d1c2-20a6-4ab5-be05-009d2bdf8d91\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cd30d1c2-20a6-4ab5-be05-009d2bdf8d91\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"35f0e9a2-c506-11e9-9533-5f53915208f3\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"bar\", \"uid\": \"35f0ebb4-c506-11e9-9533-5f53915208f3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
